@@ -4,6 +4,10 @@ Autocomplete:
         * By 15 Mb, with `A pool of strings vs id`.
         * By 10 Mb, removed interaction with `UserData`.
     * Reduced the number of saved `String` from 10,701 to 6,433.
+    * Fixed search in clusters after entered `class`.
+CodeArea:
+    * Fixed removing empty paragraph.
+    * Fixed removing selected text.
 Plugin:
     * Improved API.
     CPU:
